# fastapi-base

./: .gitignore
backend/: justfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py  tasks.py
backend/app/routes/: auth.py  todos.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 225ec5df4eb6_add_is_active_column_for_user_table.py  334d3d914fd8_create_users_table.py  8fca1f9b7480_create_todos_table.py
backend/tests/: conftest.py  test_app.py  test_db.py  test_security.py
backend/tests/routes/: test_auth.py  test_todos.py  test_users.py
backend/tests/utils/: todo_factory.py  user_factory.py
